--- a/index.html
+++ b/index.html
@@ -41,5 +41,151 @@
                  </ul>
                 </section>
             </section>
+            <section class="carts-container">
+                <section class="card">
+                    <div>
+                        <img  class="cart-image" src="Images/cart1.png" alt="cart-image">
+                    </div>
+                    <div class="cart-text">
+                        <h2 class="cart-title">tonic</h2>
+                        <ul class="card-list">
+                            <li><a href="#">CANOPY</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">Back End Dev</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">2015</a></li>
+                          </ul>
+                        <p>
+                            A daily selection of privately personalized 
+                            reads; no accounts or sign-ups required.
+                        </p>
+                        <ul class="pro-lang">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                        </ul>
+                        <button type="button" class="btn-project">See Project</button>
+                    </div>
+                </section>
+                <section class="card">
+                    <div>
+                        <img class="cart-imag" src="Images/cart2.png" alt="cart-image"> 
+                    </div>
+                    <div class="cart-text">
+                        <h2 class="cart-title">multi-post stories</h2>
+                        <ul class="card-list">
+                            <li><a href="#">CANOPY</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">Back End Dev</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">2015</a></li>
+                          </ul>
+                          <p>
+                            A daily selection of privately personalized 
+                            reads; no accounts or sign-ups required.
+                          </p>
+                          <ul class="pro-lang">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                        </ul>
+                        <button type="button" class="btn-project">See Project</button>
+                    </div>
+                </section>
+                <section class="card">
+                    <div>
+                        <img class="cart-imag" src="Images/cart3.png" alt="cart-image"> 
+                    </div>
+                    <div class="cart-text">
+                        <h2 class="cart-title">tonic</h2>
+                        <ul class="card-list">
+                            <li><a href="#">CANOPY</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">Back End Dev</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">2015</a></li>
+                          </ul>
+                          <p>
+                            A daily selection of privately personalized 
+                            reads; no accounts or sign-ups required.
+                          </p>
+                          <ul class="pro-lang">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                        </ul>
+                        <button type="button" class="btn-project">See Project</button>
+                    </div>
+                </section>
+                <section class="card">
+                    <div>
+                        <img class="cart-imag" src="Images/cart4.png" alt="cart-image"> 
+                    </div>
+                    <div class="cart-text">
+                        <h2 class="cart-title">multi-post stories</h2>
+                        <ul class="card-list">
+                            <li><a href="#">CANOPY</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">Back End Dev</a></li>
+                            <li><img src="Images/Counter.png" alt="counter"/></li>
+                            <li><a href="#">2015</a></li>
+                          </ul>
+                          <p>
+                            A daily selection of privately personalized 
+                            reads; no accounts or sign-ups required.
+                          </p>
+                          <ul class="pro-lang">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                        </ul>
+                        <button type="button" class="btn-project">See Project</button>
+                    </div>
+                </section>
+            </section>
+    
+            <section class="about-me">
+                <h2>About Myself</h2>
+                <p>
+                    Hello I’m a software developer! I can help you build a product , 
+                    feature or website. Look through some of my work and experience! 
+                    If you like what you see and have a project you need coded, don’t 
+                    hesitate to contact me.
+                </p>
+                
+                <section class="contact">
+                    <h3 class="contact-title2">LET’S CONNECT</h3>
+                      <ul class="contact-list2">
+                        <li><a href="#"><img src="Images/twitter.png"/></a></li>
+                        <li><a href="#"><img src="Images/Linkedin.png"/></a></li>
+                        <li><a href="#"><img src="Images/twitter.png"/></a></li>
+                        <li><a href="#"><img src="Images/Vector.png"/></a></li>
+                        <li><a href="#"><img src="Images/github.png"/></a></li>
+                        <li><a href="#"><img src="Images/Vector1.png"/></a></li>
+                       </ul>
+                      <button type="button" class="btn-project">Get my resume</button>
+            </section>
+            <section class="pro-languages">
+                <div class="list-head">
+                    <span>Languages </span>
+                    <span><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                </div>
+                <ul class="languages-list">
+                    <li class="skill"><img src="Images/javascript.png"><span>Javascript</span></li>
+                    <li class="skill"><img src="Images/htnl.png"><span>HTML</span></li>
+                    <li class="skill"><img src="Images/css.png"><span>CSS</span></li>
+                </ul>
+                <div class="work-skills">
+                    <h3>FrameWorks</h3>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+                <hr/>
+                <div class="work-skills">
+                    <h3>Skills</h3>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+                <hr/>
+            </section>
+        </section>
 </body>
 </html>
