adjust about me section

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
             <section class="contact">
               <h3 class="contact-title">LET’S CONNECT</h3>
                 <ul class="contact-list">
-                    <li><a href="#"><img src="Images/twitter.png"/></a></li>
-                    <li><a href="#"><img src="Images/Linkedin.png"/></a></li>
-                    <li><a href="#"><img src="Images/twitter.png"/></a></li>
+                    <li><a href="https://twitter.com/NalianAchei?t=E3ePLcJ7B45dBa8SBFIXDg&s=09"><img src="Images/twitter.png"/></a></li>
+                    <li><a href="https://www.linkedin.com/in/nalian-achei-683208275"><img src="Images/Linkedin.png"/></a></li>
                     <li><a href="#"><img src="Images/Vector.png"/></a></li>
-                    <li><a href="#"><img src="Images/github.png"/></a></li>
+                    <li><a href="https://github.com/NalianAchei2020"><img src="Images/github.png"/></a></li>
                     <li><a href="#"><img src="Images/Vector1.png"/></a></li>
                  </ul>
                 </section>
@@ -49,11 +48,11 @@
                     <div class="cart-text">
                         <h2 class="cart-title">tonic</h2>
                         <ul class="card-list">
-                            <li><a href="#">CANOPY</a></li>
+                            <li class="card-list-item1"><a href="#">CANOPY</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">Back End Dev</a></li>
+                            <li class="card-list-item"><a href="#">Back End Dev</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">2015</a></li>
+                            <li class="card-list-item"><a href="#">2015</a></li>
                           </ul>
                         <p>
                             A daily selection of privately personalized 
@@ -74,11 +73,11 @@
                     <div class="cart-text">
                         <h2 class="cart-title">multi-post stories</h2>
                         <ul class="card-list">
-                            <li><a href="#">CANOPY</a></li>
+                            <li class="card-list-item1"><a href="#">CANOPY</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">Back End Dev</a></li>
+                            <li class="card-list-item"><a href="#">Back End Dev</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">2015</a></li>
+                            <li class="card-list-item"><a href="#">2015</a></li>
                           </ul>
                           <p>
                             A daily selection of privately personalized 
@@ -99,11 +98,11 @@
                     <div class="cart-text">
                         <h2 class="cart-title">tonic</h2>
                         <ul class="card-list">
-                            <li><a href="#">CANOPY</a></li>
+                            <li class="card-list-item1"><a href="#">CANOPY</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">Back End Dev</a></li>
+                            <li class="card-list-item"><a href="#">Back End Dev</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">2015</a></li>
+                            <li class="card-list-item"><a href="#">2015</a></li>
                           </ul>
                           <p>
                             A daily selection of privately personalized 
@@ -124,11 +123,11 @@
                     <div class="cart-text">
                         <h2 class="cart-title">multi-post stories</h2>
                         <ul class="card-list">
-                            <li><a href="#">CANOPY</a></li>
+                            <li class="card-list-item1"><a href="#">CANOPY</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">Back End Dev</a></li>
+                            <li class="card-list-item"><a href="#">Back End Dev</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
-                            <li><a href="#">2015</a></li>
+                            <li class="card-list-item"><a href="#">2015</a></li>
                           </ul>
                           <p>
                             A daily selection of privately personalized 
@@ -156,11 +155,10 @@
                 <section class="contact">
                     <h3 class="contact-title2">LET’S CONNECT</h3>
                       <ul class="contact-list2">
-                        <li><a href="#"><img src="Images/twitter.png"/></a></li>
-                        <li><a href="#"><img src="Images/Linkedin.png"/></a></li>
-                        <li><a href="#"><img src="Images/twitter.png"/></a></li>
+                        <li><a href="https://twitter.com/NalianAchei?t=E3ePLcJ7B45dBa8SBFIXDg&s=09"><img src="Images/twitter.png"/></a></li>
+                        <li><a href="https://www.linkedin.com/in/nalian-achei-683208275"><img src="Images/Linkedin.png"/></a></li>
                         <li><a href="#"><img src="Images/Vector.png"/></a></li>
-                        <li><a href="#"><img src="Images/github.png"/></a></li>
+                        <li><a href="https://github.com/NalianAchei2020"><img src="Images/github.png"/></a></li>
                         <li><a href="#"><img src="Images/Vector1.png"/></a></li>
                        </ul>
                       <button type="button" class="btn-project">Get my resume</button>
