add font family to about me section

--- a/index.html
+++ b/index.html
@@ -164,24 +164,24 @@
                       <button type="button" class="btn-project">Get my resume</button>
             </section>
             <section class="pro-languages">
-                <div class="list-head">
-                    <span>Languages </span>
-                    <span><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
-                </div>
+                <ul class="list-head">
+                    <li>Languages </li>
+                    <li><i class="fa fa-chevron-down" aria-hidden="true"></i></li>
+                </ul>
                 <ul class="languages-list">
                     <li class="skill"><img src="Images/javascript.png"><span>Javascript</span></li>
                     <li class="skill"><img src="Images/htnl.png"><span>HTML</span></li>
                     <li class="skill"><img src="Images/css.png"><span>CSS</span></li>
                 </ul>
-                <div class="work-skills">
-                    <h3>FrameWorks</h3>
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
+                <ul class="work-skills">
+                   <li>FrameWorks</li>
+                    <li class="icon"><i class="fa fa-chevron-right" aria-hidden="true"></i></li>
+                </ul>
                 <hr/>
-                <div class="work-skills">
-                    <h3>Skills</h3>
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
+                <ul class="work-skills">
+                    <li>Skills</li>
+                    <li class="icon"><i class="fa fa-chevron-right" aria-hidden="true"></i></li>
+                </ul>
                 <hr/>
             </section>
         </section>
