add color to about section text

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             </section>
             <section class="pro-languages">
                 <ul class="list-head">
-                    <li>Languages </li>
-                    <li><i class="fa fa-chevron-down" aria-hidden="true"></i></li>
+                    <li class="skills-title">Languages </li>
+                    <li class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></li>
                 </ul>
                 <ul class="languages-list">
                     <li class="skill"><img src="Images/javascript.png"><span>Javascript</span></li>
@@ -174,12 +174,12 @@
                     <li class="skill"><img src="Images/css.png"><span>CSS</span></li>
                 </ul>
                 <ul class="work-skills">
-                   <li>FrameWorks</li>
+                   <li class="skills-title">FrameWorks</li>
                     <li class="icon"><i class="fa fa-chevron-right" aria-hidden="true"></i></li>
                 </ul>
                 <hr/>
                 <ul class="work-skills">
-                    <li>Skills</li>
+                    <li class="skills-title">Skills</li>
                     <li class="icon"><i class="fa fa-chevron-right" aria-hidden="true"></i></li>
                 </ul>
                 <hr/>
