--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <li class="card-list-item"><a href="#">Back End Dev</a></li>
                             <li><img src="Images/Counter.png" alt="counter"/></li>
                             <li class="card-list-item"><a href="#">2015</a></li>
-                          </ul>
+                          </ul>1
                           <p>
                             A daily selection of privately personalized 
                             reads; no accounts or sign-ups required.
@@ -184,6 +184,7 @@
                 </ul>
                 <hr/>
             </section>
+        </section> 
         </section>
 </body>
 </html>
