--- a/index.html
+++ b/index.html
@@ -184,6 +184,31 @@
                 </ul>
                 <hr/>
             </section>
+            <section class="contact">
+                <div class="contact-me container">
+                    <h6 class="h-contact"> contact me</h6>
+                      <div class="contact-in"> 
+                  <p class="para">
+                 If you have an application you are interested in <br> developing, a feature that you need built or a project <br> that needs coding. 
+          I’d love to help with it!
+                  </p>
+              </div>
+                   <form action="" method="post">
+                    <fieldset> 
+                    <input id="first-name" name="user_name" type="text" required placeholder="lores ipsum" maxlength="30" />
+                   <input id="email"  name="" type="email" required placeholder="loresipsum@gmail.com" />
+                  </fieldset>
+                   <fieldset> 
+                  <textarea name="message" placeholder="Enter your message here..."  cols="50" rows="10" maxlength="500" required></textarea>
+                </fieldset>
+                 <button class="cont-btn">
+                   Get in touch
+                 </button>
+          
+                  </form>
+                </div>
+              
+              </section>
         </section>
 </body>
 </html>
