--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           I’d love to help with it!
                   </p>
               </div>
-                   <form action="" method="post">
+                   <form action="https://formspree.io/f/mayzgdyw" method="post">
                     <fieldset> 
                     <input id="first-name" name="user_name" type="text" required placeholder="lores ipsum" maxlength="30" />
                    <input id="email"  name="" type="email" required placeholder="loresipsum@gmail.com" />
