--- a/index.html
+++ b/index.html
@@ -183,25 +183,21 @@
                     <li class="icon"><i class="fa fa-chevron-right" aria-hidden="true"></i></li>
                 </ul>
                 <hr/>
-            </section>
-            <section class="contact">
-                <div class="contact-me container">
-                    <h6 class="h-contact"> contact me</h6>
-                      <div class="contact-in"> 
-                  <p class="para">
-                 If you have an application you are interested in <br> developing, a feature that you need built or a project <br> that needs coding. 
-          I’d love to help with it!
+            </section><br/><br/>
+            <section class="contact-form ">
+            <div class="contact-text">
+             <h2>Contact me</h2>
+             <p>
+                 If you have an application you are interested in developing, 
+                 a feature that you need built or a project that needs coding.<br/> 
+                 I’d love to help with it!
                   </p>
-              </div>
-                   <form action="https://formspree.io/f/mayzgdyw" method="post">
-                    <fieldset> 
-                    <input id="first-name" name="user_name" type="text" required placeholder="lores ipsum" maxlength="30" />
-                   <input id="email"  name="" type="email" required placeholder="loresipsum@gmail.com" />
-                  </fieldset>
-                   <fieldset> 
-                  <textarea name="message" placeholder="Enter your message here..."  cols="50" rows="10" maxlength="500" required></textarea>
-                </fieldset>
-                 <button class="cont-btn">
+                </div>
+                   <form action="https://formspree.io/f/mayzgdyw" method="post" class="contact-container ">
+                    <input id="first-name" name="user_name" type="text" required placeholder="Lorem Ipsum" maxlength="30" />
+                   <input id="email"  name="" type="email" required placeholder="loremipsum@gmail.com" />
+                  <textarea name="message" placeholder="Write your message here..."  cols="50" rows="10" maxlength="500" required></textarea>
+                   <button type="submit" class="cont-btn">
                    Get in touch
                  </button>
           
