--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 </section>
             </section>
             <section class="carts-container" id="portfolio">
-                <section class="card">
-                    <div>
+            
+                <section class="card crads-desk">
+                    <div class="card-one">
                         <picture>
                             <source media="(min-width:600px)" srcset="Images/img1.png" alt="cart-image">
                             <img  class="cart-image" src="Images/cart1.png" alt="cart-image">
                         </picture>
-                    </div>
                     <div class="cart-text">
                         <h2 class="cart-title">tonic</h2>
                         <ul class="card-list">
@@ -73,6 +73,7 @@
                         </ul>
                         <button type="button" class="btn-project">See Project</button>
                     </div>
+                </div>
                 </section>
                 
                 <section class="card reverse">
