--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
         <h1 class="contact_me">Contact me</h1>
         <p class="last_par">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
         </div>
-    <form action="https://formspree.io/f/xayzojej" method="post">
-        <input type="text" maxlength="30" name="name" placeholder="Ndonyi Maurice" id="input" required/>
-        <input type="email"  name="email" placeholder="mauricendonyi40@gmail.com" id="input" required/>
+    <form action="https://formspree.io/f/mayzgdyw" method="post">
+        <input type="text" maxlength="30" name="name" placeholder="Lorem Ipsum" id="input" required/>
+        <input type="email"  name="email" placeholder="loremipsum@gmail.com" id="input" required/>
         <textarea id="textpanel" cols="30" rows="9" maxlength="500"name="message" placeholder="Write Your Message Here" required></textarea> 
         <br>
         <button type="submit" class="submit">Get In Touch</button>
