Fixed all changes required

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </header>
         
         <section id="back_image">
+            <div class="back">
             <h1 class="heading">I’m Nalian
                 <br>
                 Glad to see <span>you!</span></h1>
@@ -43,18 +44,19 @@
                      </ul>
                 </div>
             </div>
+        </div>
 </section>
 <section class="Project">
     <div class="project_one">
       <img src="./Images/imageone.png" alt="Calculator">
       <div class="name_des">
         <h1 class="nam">Tonic</h1>
-        <ul class="dot">
-            <li class="list"><a href="#" class="mic">CANOPY</a></li>
-            <li class="list"><img src="Images/image_round.png"></li>
-            <li class="list">Back End Dev</li>
-            <li class="list"><img src="Images/image_round.png"></li>
-            <li class="list">2015</li>
+        <ul class="card-list" >
+            <li class="card-list-item1"><a href="#">CANOPY</a></li>
+            <li><img src="Images/Counter.png" alt="counter"/></li>
+            <li class="card-list-item"><a href="#">Back End Dev</a></li>
+             <li><img src="Images/Counter.png" alt="counter"/></li>
+             <li class="card-list-item"><a href="#">2015</a></li>
         </ul>
         <p class="title_des">A daily selection of privately
             <br>
@@ -74,13 +76,13 @@
       <div class="name_des">
         <h1 class="nam">Multi-Post
             Stories</h1>
-        <ul class="dot">
-            <li class="list"><a href="#" class="mic">CANOPY</a></li>
-            <li class="list"><img src="Images/image_round.png" ></li>
-            <li class="list">Back End Dev</li>
-            <li class="list"><img src="Images/image_round.png" ></li>
-            <li class="list">2015</li>
-        </ul>
+            <ul class="card-list" >
+                <li class="card-list-item1"><a href="#">CANOPY</a></li>
+                <li><img src="Images/Counter.png" alt="counter"/></li>
+                <li class="card-list-item"><a href="#">Back End Dev</a></li>
+                 <li><img src="Images/Counter.png" alt="counter"/></li>
+                 <li class="card-list-item"><a href="#">2015</a></li>
+            </ul>
         <p class="title_des">A daily selection of privately
             <br>
             personalized reads; no accounts or sign-ups required.</p>
@@ -98,12 +100,12 @@
       <img src="Images/imagethree.png" alt="pro">
       <div class="name_des">
         <h1 class="nam">Facebook 360</h1>
-        <ul class="dot">
-            <li class="list"><a href="#" class="mic">CANOPY</a></li>
-            <li class="list"><img  src="Images/image_round.png" alt="pic"></li>
-            <li class="list">Back End Dev</li>
-            <li class="list"><img src="Images/image_round.png"></li>
-            <li class="list">2015</li>
+        <ul class="card-list" >
+            <li class="card-list-item1"><a href="#">CANOPY</a></li>
+            <li><img src="Images/Counter.png" alt="counter"/></li>
+            <li class="card-list-item"><a href="#">Back End Dev</a></li>
+             <li><img src="Images/Counter.png" alt="counter"/></li>
+             <li class="card-list-item"><a href="#">2015</a></li>
         </ul>
         <p class="title_des">A daily selection of privately
             <br>
@@ -122,12 +124,12 @@
       <img src="Images/imagefour.png" alt="Calculator">
       <div class="name_des">
         <h1 class="nam">Uber Navigation</h1>
-        <ul class="dot">
-            <li class="list"><a href="#" class="mic">CANOPY</a></li>
-            <li class="list"><img src="Images/image_round.png"></li>
-            <li class="list">Back End Dev</li>
-            <li class="list"><img src="Images/image_round.png"></li>
-            <li class="list">2015</li>
+        <ul class="card-list" >
+            <li class="card-list-item1"><a href="#">CANOPY</a></li>
+            <li><img src="Images/Counter.png" alt="counter"/></li>
+            <li class="card-list-item"><a href="#">Back End Dev</a></li>
+             <li><img src="Images/Counter.png" alt="counter"/></li>
+             <li class="card-list-item"><a href="#">2015</a></li>
         </ul>
         <p class="title_des">A daily selection of privately
             <br>
@@ -146,10 +148,10 @@
         <h1 class="about_text">About
             Myself</h1>
             <h4 class="about_intro">Hello I’m a software developer!
-                 I can help you build a product , feature or website Look
-                  through some of my work and experience! If you like what 
-                  you see and have a project you need coded, don’t hestiate 
-                  to contact me.</h4>
+                 I can help you build a product , feature or website Look 
+                 through some of my work and experience! 
+                If you like what you see and have a project you need coded,
+                 don’t hesitate to contact me...</h4>
             <h3>LET’S CONNECT</h3>
             <ul>
                 <li><a href="https://twitter.com/home"><img src="./Images/TWIT.PNG.jpg"></a></li>
@@ -163,6 +165,7 @@
     </div>
     <div class="languages_skill">
       <h2 class="language_text">Languages</h2>
+
       <div class="skill_bars">
         <div class="skill_bar"><img src="Images/javascript.png" alt="javascript"> <h4 class="skill_text">JAVASCRIPT</h4></div>
         <div class="skill_bar"><img src="Images/html.png" alt="html"> <h4 class="skill_text">HTML</h4></div>
