resolve linters errors

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img  class="cart-image1" src="Images/cart1.png" alt="cart-image">
         </picture>
             <div class="cart-text">
-              <h1 class="cart-title">Facebook 360</h1>
+              <h1 class="cart-title">Tonic</h1>
               <ul class="card-list" >
                   <li class="card-list-item1"><a href="#">CANOPY</a></li>
                   <li><img src="Images/Counter.png" alt="counter"/></li>
@@ -80,7 +80,7 @@
         <img class="cart-image2" src="Images/cart2.png" alt="cart-image"> 
         </picture>
             <div class="cart-text">
-              <h1 class="cart-title">Facebook 360</h1>
+              <h1 class="cart-title">Multi-Post Stories</h1>
               <ul class="card-list" >
                   <li class="card-list-item1"><a href="#">CANOPY</a></li>
                   <li><img src="Images/Counter.png" alt="counter"/></li>
