add mobile menu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a class="logo" href="#">ACHEI</a>
             <nav>
                 <ul class="nav-items">
+                     <i  class="fa fa-times" id="close_menu" aria-hidden="true"></i>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -215,5 +216,7 @@
                  </button>
                   </form>
                 </section>
+                
+                <script src="file.js"></script>
 </body>
 </html>
