--- a/index.html
+++ b/index.html
@@ -48,109 +48,7 @@
                 </section>
             </section>
     <section  id="portfolio">
-    <section class="cart">
-    <div class="cart-normal">
-        <picture>
-            <source media="(min-width:768px)" srcset="Images/img1.png" alt="cart-image">
-            <img  class="cart-image1" src="Images/cart1.png" alt="cart-image">
-        </picture>
-            <div class="cart-text">
-              <h1 class="cart-title">Tonic</h1>
-              <ul class="card-list" >
-                  <li class="card-list-item1"><a href="#">CANOPY</a></li>
-                  <li><img src="Images/Counter.png" alt="counter"/></li>
-                  <li class="card-list-item"><a href="#">Back End Dev</a></li>
-                   <li><img src="Images/Counter.png" alt="counter"/></li>
-                   <li class="card-list-item"><a href="#">2015</a></li>
-              </ul>
-              <p>A daily selection of privately personalized reads; no 
-                accounts or sign-ups required.</p>
-                  <ul class="pro-lang">
-                      <li>CSS</li>
-                      <li>HTML</li>
-                      <li>Javascript</li>
-                  </ul>
-               <button class="btn-project">See project</button>
-             </div>
-    </div> 
-</section>
-<section class="cart">
-    <div class="cart-reverse">
-        <picture>
-            <source media="(min-width:768px)" srcset="Images/img2.png" alt="cart-image">
-        <img class="cart-image2" src="Images/cart2.png" alt="cart-image"> 
-        </picture>
-            <div class="cart-text">
-              <h1 class="cart-title">Multi-Post Stories</h1>
-              <ul class="card-list" >
-                  <li class="card-list-item1"><a href="#">CANOPY</a></li>
-                  <li><img src="Images/Counter.png" alt="counter"/></li>
-                  <li class="card-list-item"><a href="#">Back End Dev</a></li>
-                   <li><img src="Images/Counter.png" alt="counter"/></li>
-                   <li class="card-list-item"><a href="#">2015</a></li>
-              </ul>
-              <p>A daily selection of privately personalized reads; no accounts or
-                 sign-ups required.</p>
-                  <ul class="pro-lang">
-                      <li>CSS</li>
-                      <li>HTML</li>
-                      <li>Javascript</li>
-                  </ul>
-               <button class="btn-project">See project</button>
-             </div>
-    </div>
-</section>
-<section class="cart">
-    <div class="cart-normal">
-        <picture>
-            <source media="(min-width:768px)" srcset="Images/cart1.png" alt="cart-image">
-            <img class="cart-image1" src="Images/cart3.png" alt="cart-image"> 
-            </picture>
-            <div class="cart-text">
-              <h1 class="cart-title">Facebook 360</h1>
-              <ul class="card-list" >
-                  <li class="card-list-item1"><a href="#">CANOPY</a></li>
-                  <li><img src="Images/Counter.png" alt="counter"/></li>
-                  <li class="card-list-item"><a href="#">Back End Dev</a></li>
-                   <li><img src="Images/Counter.png" alt="counter"/></li>
-                   <li class="card-list-item"><a href="#">2015</a></li>
-              </ul>
-              <p>A daily selection of privately personalized reads; 
-                no accounts or sign-ups required.</p>
-                  <ul class="pro-lang">
-                      <li>CSS</li>
-                      <li>HTML</li>
-                      <li>Javascript</li>
-                  </ul>
-               <button class="btn-project">See project</button>
-             </div>
-    </div>
-</section>
-<section class="cart">
-    <div class="cart-reverse">
-        <picture>
-            <source media="(min-width:768px)" srcset="Images/cart2.png" alt="cart-image">
-           <img class="cart-image2" src="Images/cart4.png" alt="cart-image">
-           </picture> 
-      <div class="cart-text">
-        <h1 class="cart-title">Uber Navigation</h1>
-        <ul class="card-list" >
-            <li class="card-list-item1"><a href="#">CANOPY</a></li>
-            <li><img src="Images/Counter.png" alt="counter"/></li>
-            <li class="card-list-item"><a href="#">Back End Dev</a></li>
-             <li><img src="Images/Counter.png" alt="counter"/></li>
-             <li class="card-list-item"><a href="#">2015</a></li>
-        </ul>
-        <p>A daily selection of privately personalized reads; no accounts
-             or sign-ups required.</p>
-            <ul class="pro-lang">
-                <li>CSS</li>
-                <li>HTML</li>
-                <li>Javascript</li>
-            </ul>
-         <button class="btn-project">See project</button>
-       </div>
-    </div>
+    <section class="cart" id="project">
 </section>
             </section>
     
