--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     <input id="first-name" name="user_name" type="text" required placeholder="Lorem Ipsum" maxlength="30" />
                    <input id="email"  name="" type="email" required placeholder="loremipsum@gmail.com" />
                   <textarea name="message" placeholder="Write your message here..."  cols="50" rows="10" maxlength="500" required></textarea>
+                  <span id="error"></span>
                    <button type="submit" class="cont-btn">
                    Get in touch
                  </button>
