--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                  I’d love to help with it!
                   </p>
                 </div>
-                   <form action="https://formspree.io/f/mayzgdyw" method="post" class="contact-container ">
+                   <form action="https://formspree.io/f/mayzgdyw" method="post" id="form" class="contact-container ">
                     <input id="first-name" name="user_name" type="text" required placeholder="Lorem Ipsum" maxlength="30" />
-                   <input id="email"  name="" type="email" required placeholder="loremipsum@gmail.com" />
+                   <input id="email"  name="email" type="email" required placeholder="loremipsum@gmail.com" />
                   <textarea name="message" placeholder="Write your message here..."  cols="50" rows="10" maxlength="500" required></textarea>
                   <span id="error"></span>
                    <button type="submit" class="cont-btn">
