--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                   </p>
                 </div>
                    <form action="https://formspree.io/f/mayzgdyw" method="post" id="form" class="contact-container ">
-                    <input id="first-name" name="user_name" type="text" required placeholder="Lorem Ipsum" maxlength="30" />
+                    <input id="first-name" name="name" type="text" required placeholder="Lorem Ipsum" maxlength="30" />
                    <input id="email"  name="email" type="email" required placeholder="loremipsum@gmail.com" />
-                  <textarea name="message" placeholder="Write your message here..."  cols="50" rows="10" maxlength="500" required></textarea>
+                  <textarea name="message" id="message" placeholder="Write your message here..."  cols="50" rows="10" maxlength="500" required></textarea>
                   <span id="error"></span>
                    <button type="submit" class="cont-btn">
                    Get in touch
